--- a/exampleCodes/Hello.html
+++ b/exampleCodes/Hello.html
@@ -9,10 +9,10 @@
 
 	<h1> Hello GreenSolutions</h1>
 
-	<p>If you successufully open this page try to add a paragraph which include your name and your email address</p>
+	<p>If you successfully open this page try to add a paragraph which include your name and your email address</p>
 
 	<p>this is a sample file</p>
-
+	<p>{Name: Buhari Alhassan Ahmed, E-mail: buhari.alhassan0@gmail.com}</p>
 
 </body>
 </html>
