--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@
 </div>
 
 <div class="w3-quarter">
-  <img src="buhari.jpg" alt="Babangida Sani" style="width:45%" class="w3-circle w3-hover-opacity" title="Babangida Sani">
+  <img src="buhari.jpg" alt="Buhari Ahmed Alhassan" style="width:45%" class="w3-circle w3-hover-opacity" title="Buhari Ahmed Alhassan">
   <h3>Buhari Alhassan</h3>
   <p>System Analyst</p>
-   <a class="" href="https://www.facebook.com/mubarak.daha" title="Facebook"><img src="fb.png" width="10%"></i></a>
-  <a  href="https://www.twitter.com/dr_bagwai" title="Twitter"><img width="10%" src="twitter.png"></a>
-  <a class="" href="https://www.instagram.com/drbagwai" title="Instagram"><img width="10%" src="insta.png"></a>  
-  <a  href="https://www.github.com/bagwai" title="Linkedin"><img width="10%" src="github.png"></a>
-  <a class="" href="08060327028" title="WhatsApp"><img width="10%" src="whatsapp.png"></a>
-  <a href="https://www.linkedin.com/bagwai" title="Linkedin"><img src="in.png" width="10%"></a>
+   <a class="" href="https://www.facebook.com/makajeez" title="Facebook"><img src="fb.png" width="10%"></i></a>
+  <a  href="https://www.twitter.com/makajeez" title="Twitter"><img width="10%" src="twitter.png"></a>
+  <a class="" href="https://www.instagram.com/makajeez" title="Instagram"><img width="10%" src="insta.png"></a>  
+  <a  href="https://www.github.com/makajeez" title="GitHub"><img width="10%" src="github.png"></a>
+  <a class="" href="08145044481" title="WhatsApp"><img width="10%" src="whatsapp.png"></a>
+  <a href="https://www.linkedin.com/buhariahmedalhassan" title="Linkedin"><img src="in.png" width="10%"></a>
 </div>
 
 </div>
